OKIs display_name with node-name PoC

--- a/examples/apache.yaml
+++ b/examples/apache.yaml
@@ -13,7 +13,7 @@ spec:
     metadata:
       annotations:
         newrelic.com/integrations-sidecar-configmap: "apache-newrelic-integrations-config"
-        newrelic.com/integrations-sidecar-imagename: "newrelic/k8s-nri-apache"
+        newrelic.com/integrations-sidecar-imagename: "nri-apache-connect:staging"
       labels:
         app: apache
     spec:
