--- a/examples/postgresql.yaml
+++ b/examples/postgresql.yaml
@@ -24,18 +24,18 @@ data:
     commands:
       all_data:
         command:
-          - ./bin/nr-postgresql
+          - ./bin/nri-postgresql
         prefix: config/postgresql
         interval: 15
       metrics:
         command:
-          - ./bin/nr-postgresql
+          - ./bin/nri-postgresql
           - --metrics
         prefix: config/postgresql
         interval: 15
       inventory:
         command:
-          - ./bin/nr-postgresql
+          - ./bin/nri-postgresql
           - --inventory
         prefix: config/postgresql
         interval: 15
